force-app/main/default/objects/Entitlement/fields/HRCFSL_Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Asset_Name__c</fullName>
    <description>Separate field for storing the asset name field on Entitlement so users can search for Entitlements by Asset Name. HF-395. Can&apos;t go with formula because formula fields are not supported for search.</description>
    <label>Asset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>