force-app/main/default/objects/Entitlement/fields/HRCSVC_Active_Status__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Active_Status__c</fullName>
    <formula>AND((StartDate &lt;= TODAY()) &amp;&amp; (TODAY() &lt; (EndDate +30)),
(ServiceContract.HRCSVC_ERP_Status_New__c  = &quot;Active&quot;),
 ISBLANK(ContractLineItem.HRCSVC_Suspend_Date__c),
 ISBLANK(ContractLineItem.HRCSVC_Cancel_Date__c))</formula>
    <label>Active Status</label>
    <type>Checkbox</type>
</CustomField>