force-app/main/default/objects/Entitlement/fields/HRCSVC_Product__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Entitlements</relationshipLabel>
    <relationshipName>Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>