force-app/main/default/objects/Entitlement/fields/HRCSVC_Service_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Service_Contract_Number__c</fullName>
    <formula>ServiceContract.ContractNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Contract Number</label>
    <type>Text</type>
</CustomField>