force-app/main/default/objects/Entitlement/fields/HRCSVC_Service_Package__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Service_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Package</label>
    <referenceTo>HRCSVC_Service_Package__c</referenceTo>
    <relationshipLabel>Entitlements</relationshipLabel>
    <relationshipName>Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>