force-app/main/default/objects/Entitlement/fields/HRCSVC_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Status_Notes__c</fullName>
    <formula>IF( HRCSVC_Active_Status__c , &quot;Active&quot; , 

IF( ServiceContract.HRCSVC_ERP_Status_New__c &lt;&gt; &quot;Active&quot;,&quot;Service Contract is not active (Status = &quot; &amp;  TEXT(ServiceContract.HRCSVC_ERP_Status__c) &amp; &quot; )&quot;,
IF(NOT(ISBLANK( ContractLineItem.HRCSVC_Cancel_Date__c )),&quot;Contract Line Item is CANCELED&quot;,
IF(NOT(ISBLANK(ContractLineItem.HRCSVC_Suspend_Date__c )),&quot;Contract Line Item is SUSPENDED&quot;,&quot;&quot;
)

)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Notes</label>
    <type>Text</type>
</CustomField>